# NxtM

./: .gitignore  CMakeLists.txt  README.md
include/nxtm/: nxtm_utils.hpp  vector3.hpp
include/nxtm/details/: vector3_impl.inl
test/: test_vector3.cpp  test_vector3.hpp
